--- a/recepti.ipynb
+++ b/recepti.ipynb
@@ -1107,7 +1107,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Tudi v tem primeru je odvisnost nejasna. Ocena recepta je dokaj konstantna in ni odvisna od časa priprave."
+    "Tudi v tem primeru je odvisnost nejasna. Sklepamo, da ocena recepta ni odvisna od časa priprave."
    ]
   },
   {
@@ -2720,7 +2720,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.10.2 (tags/v3.10.2:a58ebcc, Jan 17 2022, 14:12:15) [MSC v.1929 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
